objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Graduation_SL_5_Variation__c</fullName>
        <formula>IF( 
OR( ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.1 - full-time support worker required&quot;) ,
ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.05 - support worker required, can share with another YP&quot;),
ISPICKVAL(Contact__r.Access_category_2_6__c, &quot;5.2 - requires 2 full time support workers&quot;)),
&quot;Those who have attended enough of the programme will receive a certificate signed by the Prime Minister and become an official graduate of NCS. After the programme has finished, if you have missed too much of it to be able to graduate we will contact you to discuss this. You will still be very welcome to come along and celebrate your achievements on NCS with your guest and the rest of your team.&quot; 
 &amp;BR()&amp; BR()&amp;
&quot;Don’t worry if you can&apos;t attend - if you are eligible to receive a certificate but don’t attend your graduation, we will automatically post this to you in the weeks following the ceremony. So all you need to do is wait (and update us if your address has changed).&quot;
,
BR()&amp;BR()&amp;&quot;Unfortunately, based on the number of hours you missed on the programme, you will not be able to receive a certificate and become an official graduate of NCS with The Challenge. However, you are still very welcome to come along and celebrate your achievements on NCS with your guest and the rest of your team.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation: SL 5 Variation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Surrey_Variation__c</fullName>
        <formula>IF(CONTAINS(Contact__r.Assigned_Wave__r.Name, &quot;Surrey&quot;),

&quot;&quot;,
&quot;Don’t forget to spread the word about NCS to friends who missed out. Get them to sign up to our February half term programme at www.NCSTheChallenge.org. Give them your unique code: &quot;
&amp; Contact__r.Promotional_Code__c &amp;
&quot;. If they sign up by 13 February, you will receive a £20 Love2shop voucher, and they will get to sign up for a once-in-a-lifetime experience for just £35! Plus, if you successfully sign up 3 friends, you’ll automatically be entered into our prize draw to win an iPad. Terms and conditions apply – please see www.NCSTheChallenge.org/terms for further details.&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation Surrey Variation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_date__c</fullName>
        <formula>Contact__r.Assigned_Wave__r.Graduation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation_status1__c</fullName>
        <description>Grad status updated by workflow. Used in 2013 attendances</description>
        <label>Graduation status OLD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_status__c</fullName>
        <formula>IF(  Graduate_despite_no_of_absences__c = TRUE, &quot;ELIGIBLE&quot;, 

IF( Percentage_of_Days_Attended_HIDDEN__c &lt;0.5,&quot;INELIGIBLE&quot;, 

IF( Hours_required_for_graduation_form__c   &lt;= 0, &quot;ELIGIBLE&quot;,

&quot;INELIGIBLE&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTMU_deadline__c</fullName>
        <formula>Contact__r.Assigned_Wave__r.Graduation_Date__c - 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HTMU deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HTMU_possible__c</fullName>
        <formula>IF(  Total_number_of_recorded_absences__c &lt;= Hours_to_make_up_due_to_lateness__c ,TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HTMU possible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Wave_Begun__c</fullName>
        <formula>IF( Wave_Selection__r.Wave__r.PC_KO_day__c &lt;= today(), &quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Wave Begun</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_they_left__c</fullName>
        <formula>if( Max_Day_that_card_was_given_YP_left__c &gt;0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Have they left?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_1__c</fullName>
        <description>DS 05/06/12: Now unused. Potential delete?

{This field, together with Hours 2, calculates how many hours need to be made up over the entire programme, using the values specified by the Absences Policy.
The formula is split into 2 fields because it was too large to fit in 1.}</description>
        <formula>IF( ISPICKVAL( PC_1__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( PC_1__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( PC_2__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( PC_2__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( PC_3__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( PC_3__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( PC_4__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( PC_4__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( PC_5__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( PC_5__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( PC_6__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( PC_6__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( PC_1__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( PC_2__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( PC_3__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( PC_4__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( PC_5__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( PC_6__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( TC_1__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( TC_1__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( TC_2__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( TC_2__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( TC_3__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( TC_3__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( TC_4__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( TC_4__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( TC_5__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( TC_5__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( TC_1__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( TC_2__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( TC_3__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( TC_4__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( TC_5__c , &quot;Absence unauthorised&quot;), 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_2__c</fullName>
        <description>DS 05/06/12: Now unused. Potential delete? 

{This field, together with Hours 1, calculates how many hours need to be made up over the entire programme, using the values specified by the Absences Policy.
The formula is split into 2 fields because it was too large to fit in 1.}</description>
        <formula>IF( ISPICKVAL( RCD_1__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( RCD_1__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( RCD_2__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( RCD_2__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( RCD_3__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( RCD_3__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( RCD_4__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( RCD_4__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( RCD_1__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( RCD_2__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( RCD_3__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( RCD_4__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( RCA_1__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( RCA_1__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( RCA_2__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( RCA_2__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( RCA_3__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( RCA_3__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( RCA_4__c , &quot;Late - 1.5 to 3 hours&quot;), 2, 0) + IF( ISPICKVAL( RCA_4__c , &quot;Late - more than 3 hours&quot;), 5, 0) + IF( ISPICKVAL( RCA_1__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( RCA_2__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( RCA_3__c , &quot;Absence unauthorised&quot;), 5, 0) + IF( ISPICKVAL( RCA_4__c , &quot;Absence unauthorised&quot;), 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Modify_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hours Modify Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_for_100__c</fullName>
        <formula>IF( 

(Unauthorised_absences__c + Authorised_absences__c) *8 

- IF( Hours_to_make_up_due_to_lateness__c &gt; Total_hours_submitted__c ,Total_hours_submitted__c, Hours_to_make_up_due_to_lateness__c ) 

&lt; 0, 0, 


(Unauthorised_absences__c + Authorised_absences__c) *8 

- IF( Hours_to_make_up_due_to_lateness__c &gt; Total_hours_submitted__c ,Total_hours_submitted__c, Hours_to_make_up_due_to_lateness__c ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Required for 100%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_required_for_graduation_form__c</fullName>
        <description>Overwritten 2015 formula can be found here:

https://docs.google.com/a/the-challenge.org/document/d/1njygdiNrkAIYxfiT5rOBq_stvsW9jL1tI1Ccn2yOBDI/edit?usp=sharing</description>
        <formula>IF( 

(Unauthorised_absences__c + Authorised_absences__c) *8 

- IF( Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE, 1.5,IF( Wave_Model__c =&quot;Pilot&quot;,2,2.5))*8 

- IF( Percentage_of_Days_Attended_HIDDEN__c &gt;=0.75,Authorised_Absences_Hours_Allowed_wf__c,0) 

- IF( Hours_to_make_up_due_to_lateness__c &gt; Total_hours_submitted__c ,Total_hours_submitted__c, Hours_to_make_up_due_to_lateness__c ) 

&lt; 0, 0, 


(Unauthorised_absences__c + Authorised_absences__c) *8 

- IF( Contact__r.Assigned_Wave__r.Autumn_wave__c = TRUE, 1.5,IF( Wave_Model__c =&quot;Pilot&quot;,2,2.5))*8 

- IF( Percentage_of_Days_Attended_HIDDEN__c &gt;=0.75,Authorised_Absences_Hours_Allowed_wf__c,0) 

- IF( Hours_to_make_up_due_to_lateness__c &gt; Total_hours_submitted__c ,Total_hours_submitted__c,Hours_to_make_up_due_to_lateness__c) 
)</formula>
        <label>Additional hours required for grad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_be_made_up__c</fullName>
        <description>Hours missed from the programme</description>
        <formula>Days_Absent_WF__c  * 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours missed from NCS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_make_up_1__c</fullName>
        <formula>IF( ISBLANK(TEXT( Unauthorised_Reason_for_Absence_1__c )) ,0, 

IF(ISPICKVAL( Absence_1__c  ,&quot;Absent all day&quot;) ,5, 0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours to make up 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_make_up_2__c</fullName>
        <formula>IF(  ISBLANK(TEXT( Unauthorised_Reason_for_Absence_2__c )) ,0, 

IF(ISPICKVAL( Status_2__c  ,&quot;Absent all day&quot;), 5, 0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours to make up 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_make_up_3__c</fullName>
        <formula>IF(  ISBLANK(TEXT( Unauthorised_Reason_for_Absence_3__c )),0, 

IF(ISPICKVAL( Status_3__c  ,&quot;Absent all day&quot;), 5, 
0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours to make up 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_make_up__c</fullName>
        <description>Repurposed to calculate hours left to be made up to 85%</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorised hours missed from NCS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_make_up_due_to_absences1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculates the number of hours to be made up due to authorised absences.
Will show &quot;0&quot; if the YP has had too many authorised absences to graduate</inlineHelpText>
        <label>Hours to make up due to auth. absences</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_make_up_due_to_lateness__c</fullName>
        <description>This denotes the authorised absences that A YP can use to make them self up from 75-85%</description>
        <formula>IF(Wave_Model__c =&quot;Pilot&quot;,

IF(Days_Absent_WF__c&gt; 1.5,1.5, Days_Absent_WF__c)* 8,

IF(Days_Absent_WF__c&gt; 2,2, Days_Absent_WF__c)* 8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours available to make up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hrs_to_make_up_inc_hrs_submitted__c</fullName>
        <formula>Total_hours_to_make_up_for_grad_C_O__c - Total_hours_submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Hrs to make up (inc hrs submitted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_graduation_possible__c</fullName>
        <formula>IF( HTMU_possible__c = TRUE, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Is graduation possible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Day_that_card_was_given_YP_left__c</fullName>
        <label>Day that the card was given/YP left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_going_to_the_TCKO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used if a YP is not going to the TCKO, but going straight to the Res accommodation</description>
        <inlineHelpText>This will be tick if the YP is going straight to the Residential Accommodation, and not going to the TCKO.</inlineHelpText>
        <label>Not going to the TCKO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_of_Eligibility__c</fullName>
        <description>Notes on the YPs eligibility to graduate despite the number of absences</description>
        <inlineHelpText>Details of why the YP should be allowed to graduate despite the number of absences</inlineHelpText>
        <label>Eligibility notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_PC_absences__c</fullName>
        <formula>IF(OR(ISPICKVAL(PC_1__c, &quot;Attended&quot;), ISBLANK(TEXT(PC_1__c))), 0, 1) + 
IF(OR(ISPICKVAL(PC_2__c, &quot;Attended&quot;), ISBLANK(TEXT(PC_2__c))), 0, 1) + 
IF(OR(ISPICKVAL(PC_3__c, &quot;Attended&quot;), ISBLANK(TEXT(PC_3__c))), 0, 1) + 
IF(OR(ISPICKVAL(PC_4__c, &quot;Attended&quot;), ISBLANK(TEXT(PC_4__c))), 0, 1) + 
IF(OR(ISPICKVAL(PC_5__c, &quot;Attended&quot;), ISBLANK(TEXT(PC_5__c))), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># PC absences/latenesses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_PC_days_attended__c</fullName>
        <description>Calculates total number of days which are not marked as either ‘Absence authorised’ or ‘Absence unauthorised’, using the corresponding ‘Days Calculation’ field. This field has an in-built formula which prevent days with a value greater than ‘Red card day as a number’ from being counted, if ‘Red card day as a number’ &lt;&gt; 0.</description>
        <formula>IF( ISPICKVAL( PC_1__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( PC_1__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( PC_2__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( PC_2__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( PC_3__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( PC_3__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( PC_4__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( PC_4__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( PC_5__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( PC_5__c , &quot;Half day&quot;), 0.5, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of PC days attended</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_PC_days_missed__c</fullName>
        <formula>PC_1_Absence_number__c + PC_2_Absence_number__c +   PC_3_Absence_number__c +   PC_4_Absence_number__c +   PC_5_Absence_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of PC days missed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RCA_absences__c</fullName>
        <formula>IF(OR(ISPICKVAL(RCA_1__c, &quot;Attended&quot;), ISBLANK(TEXT(RCA_1__c))), 0, 1) + 
IF(OR(ISPICKVAL(RCA_2__c, &quot;Attended&quot;), ISBLANK(TEXT(RCA_2__c))), 0, 1) + 
IF(OR(ISPICKVAL(RCA_3__c, &quot;Attended&quot;), ISBLANK(TEXT(RCA_3__c))), 0, 1) + 
IF(OR(ISPICKVAL(RCA_4__c, &quot;Attended&quot;), ISBLANK(TEXT(RCA_4__c))), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># RCA absences/latenesses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RCA_days_attended__c</fullName>
        <description>Calculates total number of days which are not marked as either ‘Absence authorised’ or ‘Absence unauthorised’, using the corresponding ‘Days Calculation’ field. This field has an in-built formula which prevent days with a value greater than ‘Red card day as a number’ from being counted, if ‘Red card day as a number’ &lt;&gt; 0.</description>
        <formula>IF( ISPICKVAL( RCA_1__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( RCA_1__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( RCA_2__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( RCA_2__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( RCA_3__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( RCA_3__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( RCA_4__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( RCA_4__c , &quot;Half day&quot;), 0.5, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of RCA days attended</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RCA_days_missed__c</fullName>
        <formula>RCA_1_Absence_number__c + RCA_2_Absence_number__c + RCA_3_Absence_number__c + RCA_4_Absence_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of RCA days missed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RCD_absences__c</fullName>
        <formula>IF(OR(ISPICKVAL(RCD_1__c, &quot;Attended&quot;), ISBLANK(TEXT(RCD_1__c))), 0, 1) + 
IF(OR(ISPICKVAL(RCD_2__c, &quot;Attended&quot;), ISBLANK(TEXT(RCD_2__c))), 0, 1) + 
IF(OR(ISPICKVAL(RCD_3__c, &quot;Attended&quot;), ISBLANK(TEXT(RCD_3__c))), 0, 1) + 
IF(OR(ISPICKVAL(RCD_4__c, &quot;Attended&quot;), ISBLANK(TEXT(RCD_4__c))), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># RCD absences/latenesses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RCD_days_attended__c</fullName>
        <description>Calculates total number of days which are not marked as either ‘Absence authorised’ or ‘Absence unauthorised’, using the corresponding ‘Days Calculation’ field. This field has an in-built formula which prevent days with a value greater than ‘Red card day as a number’ from being counted, if ‘Red card day as a number’ &lt;&gt; 0.</description>
        <formula>IF( ISPICKVAL( RCD_1__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( RCD_1__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( RCD_2__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( RCD_2__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( RCD_3__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( RCD_3__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( RCD_4__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( RCD_4__c , &quot;Half day&quot;), 0.5, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of RCD days attended</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RCD_days_missed__c</fullName>
        <formula>RCD_1_Absence_number__c + RCD_2_Absence_number__c + RCD_3_Absence_number__c + RCD_4_Absence_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of RCD days missed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_TC_absences__c</fullName>
        <description>Calculates the number of days absent that week, using the ‘Day attendance’ fields. The formula takes into account ‘Red card day as a number’, using this number if it &lt;&gt; 0 to calculate the date after which it should stop counting.</description>
        <formula>IF(OR(ISPICKVAL(TC_1__c, &quot;Attended&quot;), ISBLANK(TEXT(TC_1__c))), 0, 1) + 
IF(OR(ISPICKVAL(TC_2__c, &quot;Attended&quot;), ISBLANK(TEXT(TC_2__c))), 0, 1) + 
IF(OR(ISPICKVAL(TC_3__c, &quot;Attended&quot;), ISBLANK(TEXT(TC_3__c))), 0, 1) + 
IF(OR(ISPICKVAL(TC_4__c, &quot;Attended&quot;), ISBLANK(TEXT(TC_4__c))), 0, 1) + 
IF(OR(ISPICKVAL(TC_5__c, &quot;Attended&quot;), ISBLANK(TEXT(TC_5__c))), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># TC absences/latenesses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_TC_days_attended__c</fullName>
        <description>Calculates total number of days which are not marked as either ‘Absence authorised’ or ‘Absence unauthorised’, using the corresponding ‘Days Calculation’ field. This field has an in-built formula which prevent days with a value greater than ‘Red card day as a number’ from being counted, if ‘Red card day as a number’ &lt;&gt; 0.</description>
        <formula>IF( ISPICKVAL( TC_1__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( TC_1__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( TC_2__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( TC_2__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( TC_3__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( TC_3__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( TC_4__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( TC_4__c , &quot;Half day&quot;), 0.5, 0))
+ IF( ISPICKVAL( TC_5__c , &quot;Attended&quot;), 1, IF( ISPICKVAL( TC_5__c , &quot;Half day&quot;), 0.5, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of TC days attended</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_TC_days_missed__c</fullName>
        <formula>TC_1_Absence_number__c + TC_2_Absence_number__c + TC_3_Absence_number__c + TC_4_Absence_number__c + TC_5_Absence_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of TC days missed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_YPs_started_program__c</fullName>
        <formula>Wave_Selection__r.Wave__r.Mktg_Number_of_YPs_started_Wave__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of YPs started program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC1_attendance__c</fullName>
        <formula>IF (ISPICKVAL(PC_1__c, &quot;&quot;),NULL,
IF (ISPICKVAL(PC_1__c, &quot;Attended&quot;),1,
IF (ISPICKVAL(PC_1__c, &quot;Half day&quot;),0.5,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC1 attendance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC2_attendance__c</fullName>
        <formula>IF (ISPICKVAL(PC_2__c, &quot;&quot;),NULL,
IF (ISPICKVAL(PC_2__c, &quot;Attended&quot;),1,
IF (ISPICKVAL(PC_2__c, &quot;Half day&quot;),0.5,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC2 attendance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC3_attendance__c</fullName>
        <formula>IF (ISPICKVAL(PC_3__c, &quot;&quot;),NULL,
IF (ISPICKVAL(PC_3__c, &quot;Attended&quot;),1, 
IF (ISPICKVAL(PC_3__c, &quot;Half day&quot;),0.5,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC3 attendance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO__c</fullName>
        <formula>Contact__r.Assigned_Wave__r.PC_KO_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCKO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_1_Absence_number__c</fullName>
        <formula>IF (ISPICKVAL(PC_1__c, &quot;&quot;),NULL,
IF (ISPICKVAL(PC_1__c, &quot;Attended&quot;),0,
IF (ISPICKVAL(PC_1__c, &quot;Half day&quot;),0.5,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC 1 Absence number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_1__c</fullName>
        <label>PC 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Late - 1.5 to 3 hours</fullName>
                </value>
                <value>
                    <fullName>Late - more than 3 hours</fullName>
                </value>
                <value>
                    <fullName>Absence authorised</fullName>
                </value>
                <value>
                    <fullName>Absence unauthorised</fullName>
                </value>
                <value>
                    <fullName>Absent all day</fullName>
                </value>
                <value>
                    <fullName>Half day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_2_Absence__c</fullName>
        <label>PC 2 Absence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Bereavement</fullName>
                </value>
                <value>
                    <fullName>2. Illness</fullName>
                </value>
                <value>
                    <fullName>3. Serious injury</fullName>
                </value>
                <value>
                    <fullName>4. Job interviews</fullName>
                </value>
                <value>
                    <fullName>5. Commencement of employment</fullName>
                </value>
                <value>
                    <fullName>6. Sixth Form Collgege inductions</fullName>
                </value>
                <value>
                    <fullName>7. Religious festivals</fullName>
                </value>
                <value>
                    <fullName>8. Exams and GCSE (Only) exam results</fullName>
                </value>
                <value>
                    <fullName>9. Other (Unauthorised)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_2_Absence_number__c</fullName>
        <formula>IF (ISPICKVAL(PC_2__c, &quot;&quot;),NULL,
IF (ISPICKVAL(PC_2__c, &quot;Attended&quot;),0,
IF (ISPICKVAL(PC_2__c, &quot;Half day&quot;),0.5,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC 2 Absence number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_2__c</fullName>
        <label>PC 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Late - 1.5 to 3 hours</fullName>
                </value>
                <value>
                    <fullName>Late - more than 3 hours</fullName>
                </value>
                <value>
                    <fullName>Absence authorised</fullName>
                </value>
                <value>
                    <fullName>Absence unauthorised</fullName>
                </value>
                <value>
                    <fullName>Absent all day</fullName>
                </value>
                <value>
                    <fullName>Half day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_3_Absence__c</fullName>
        <label>PC 3 Absence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Bereavement</fullName>
                </value>
                <value>
                    <fullName>2. Illness</fullName>
                </value>
                <value>
                    <fullName>3. Serious injury</fullName>
                </value>
                <value>
                    <fullName>4. Job interviews</fullName>
                </value>
                <value>
                    <fullName>5. Commencement of employment</fullName>
                </value>
                <value>
                    <fullName>6. Sixth Form Collgege inductions</fullName>
                </value>
                <value>
                    <fullName>7. Religious festivals</fullName>
                </value>
                <value>
                    <fullName>8. Exams and GCSE (Only) exam results</fullName>
                </value>
                <value>
                    <fullName>9. Other (Unauthorised)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_3_Absence_number__c</fullName>
        <formula>IF (ISPICKVAL(PC_3__c, &quot;&quot;),NULL,
IF (ISPICKVAL(PC_3__c, &quot;Attended&quot;),0,
IF (ISPICKVAL(PC_3__c, &quot;Half day&quot;),0.5,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC 3 Absence number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_3__c</fullName>
        <label>PC 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Late - 1.5 to 3 hours</fullName>
                </value>
                <value>
                    <fullName>Late - more than 3 hours</fullName>
                </value>
                <value>
                    <fullName>Absence authorised</fullName>
                </value>
                <value>
                    <fullName>Absence unauthorised</fullName>
                </value>
                <value>
                    <fullName>Absent all day</fullName>
                </value>
                <value>
                    <fullName>Half day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>